--- a/linkedin_scrapper/config.json
+++ b/linkedin_scrapper/config.json
@@ -1,7 +1,7 @@
 {
-    "username": "d04032004singh@gmail.com",
-    "password": "Divyanshu@password@1234",
-    "userKeywords": "legal head",
+    "username": "//email",
+    "password": "//password",
+    "userKeywords": "legal head", 
     "userLocation": "india",
     "MAX_PAGES": 2,
     "csvFilePath": "hiiiii.csv"
